--- a/bento.html
+++ b/bento.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="benta.css">
+    <link rel="stylesheet" href="bento.css">
     <title>Bento Grid</title>
 </head>
 <body>
@@ -25,19 +25,19 @@
         <div class="item maintain-schedule">
             <div class="content maintain-post">
                 <h1>Maintain a Consistent Posting schedule</h1>
-                <img height="50" src="illustration-consistent-schedule.webp">
+                <img height="1000" src="illustration-consistent-schedule.webp">
             </div>
         </div>
         <div class="item schedule-social">
             <div class="content schedule-media">
                 <h1>Schedule to social media</h1>
-                <img src="illustration-schedule-posts.webp">
+                <img height="250" src="illustration-schedule-posts.webp">
                 <p>Optimize post timings to publish content at the perfect time for your audience</p>
             </div>            
         </div>
         <div class="item grow-faster">
             <div class="followers-growth">
-                <img height="200" src="illustration-grow-followers.webp">
+                <img height="150" src="illustration-grow-followers.webp">
                 <h1>Grow followers with non-stop content</h1>
             </div>
         </div>
