Made some changes to the CSS to make it responsive

--- a/bento.html
+++ b/bento.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <link rel="stylesheet" href="bento.css">
+    <link href="http:fonts.googleapis.com/css2?family=DM+Sans:wght@100..700&display=swap" rel="stylesheet">
     <title>Bento Grid</title>
 </head>
 <body>
@@ -11,7 +13,7 @@
             <div class="content social-media">
                 <h1>Social Media <span>10x</span> <i>faster</i> with AI</h1>
                 <div class="star">
-                    <img src="illustration-five-stars.webp">
+                    <img height="30" width="150"  src="illustration-five-stars.webp">
                     <p>Over 4,000 5-star reviews</p>
                 </div>
             </div>
@@ -25,7 +27,7 @@
         <div class="item maintain-schedule">
             <div class="content maintain-post">
                 <h1>Maintain a Consistent Posting schedule</h1>
-                <img height="1000" src="illustration-consistent-schedule.webp">
+                <img height="250" src="illustration-consistent-schedule.webp">
             </div>
         </div>
         <div class="item schedule-social">
@@ -37,7 +39,7 @@
         </div>
         <div class="item grow-faster">
             <div class="followers-growth">
-                <img height="150" src="illustration-grow-followers.webp">
+                <img height="200" src="illustration-grow-followers.webp">
                 <h1>Grow followers with non-stop content</h1>
             </div>
         </div>
@@ -53,7 +55,7 @@
         <div class="item create-content">
             <div class="content create-post">
                 <h1>Create and schedule content <span>quicker</span></h1>
-                <img height="80" src="illustration-create-post.webp">
+                <img height="90" src="illustration-create-post.webp">
             </div>
         </div>
         <div class="item write-ai">
