--- a/bento.html
+++ b/bento.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <link rel="stylesheet" href="bento.css">
-    <link href="http:fonts.googleapis.com/css2?family=DM+Sans:wght@100..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     <title>Bento Grid</title>
 </head>
 <body>
     <div class="grid-container"> 
         <div class="item social-ai">
             <div class="content social-media">
-                <h1>Social Media <span>10x</span> <i>faster</i> with AI</h1>
+                <h1>Social Media <span>10x</span> <i>Faster</i> with AI</h1>
                 <div class="star">
                     <img height="30" width="150"  src="illustration-five-stars.webp">
                     <p>Over 4,000 5-star reviews</p>
@@ -21,47 +23,47 @@
         <div class="item manage-platforms">
             <div class="content manage-account">
                 <img height="50" src=illustration-multiple-platforms.webp>
-                <h1>Manage multiple accounts and platforms</h1>
+                <h1>Manage multiple accounts and platforms.</h1>
             </div>
         </div>
         <div class="item maintain-schedule">
             <div class="content maintain-post">
-                <h1>Maintain a Consistent Posting schedule</h1>
-                <img height="250" src="illustration-consistent-schedule.webp">
+                <h1>Maintain a Consistent Posting schedule.</h1>
+                <img src="illustration-consistent-schedule.webp">
             </div>
         </div>
         <div class="item schedule-social">
             <div class="content schedule-media">
-                <h1>Schedule to social media</h1>
-                <img height="250" src="illustration-schedule-posts.webp">
-                <p>Optimize post timings to publish content at the perfect time for your audience</p>
+                <h1>Schedule to social media.</h1>
+                <img src="illustration-schedule-posts.webp">
+                <p>Optimize post timings to publish content at the perfect time for your audience.</p>
             </div>            
         </div>
         <div class="item grow-faster">
             <div class="followers-growth">
-                <img height="200" src="illustration-grow-followers.webp">
+                <img src="illustration-grow-followers.webp">
                 <h1>Grow followers with non-stop content</h1>
             </div>
         </div>
         <div class="item faster-growth">
             <div class="content audience-growth">
                 <div class="faster-word">
-                    <h1>>56%</h1>
+                    <h1><span>></span>56%</h1>
                     <p>faster audience growth</p>
-                    <img height="50" src="illustration-audience-growth.webp">
+                    <img src="illustration-audience-growth.webp">
                 </div>
             </div>
         </div>
         <div class="item create-content">
             <div class="content create-post">
-                <h1>Create and schedule content <span>quicker</span></h1>
+                <h1>Create and schedule content <span>quicker.</span></h1>
                 <img height="90" src="illustration-create-post.webp">
             </div>
         </div>
         <div class="item write-ai">
             <div class="content write-post">
-                <h1>Write your content using AI</h1>
-                <img height="200" src="ai.jpeg">
+                <h1>Write your content using AI.</h1>
+                <img src="ai.jpeg">
             </div>
         </div>
     </div>   
